# rmat_generator

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
benchmark/: CMakeLists.txt  bench_engines.cpp  gen_edges.cpp
include/: __rmat_utils.hpp  rmat_generator.hpp
test/: CMakeLists.txt  test_detail.cpp  test_engines.cpp  test_simple.cpp
